[tool.poetry]
name = "pacrunner"
version = "0.1.0"
description = ""
authors = ["blex-max <ablex7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
tickpy = "0.4.0"
pygame = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pacrunner = "pacrunner.main:main"
